--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "ajv-formats": "^2.1.1"
   },
   "devDependencies": {
+    "@types/bun": "^1.3.6",
     "@types/node": "^20.10.0",
     "typescript": "^5.3.0"
   }
